# LLM_Extractor

./: .gitignore  README.md  config.py  main.py  models.py  pipeline.py  pyproject.toml  requirements.txt  soa_footnotes.json
extractor/: footnote_extractor.py
llm_extractor/: __init__.py  extractor.py
output/: writer.py
parser/: condition_parser.py
resolver/: reference_resolver.py
utils/: ollama_client.py  pdf_reader.py
