[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-extractor"
version = "0.1.0"
description = "Extract structured data from documents using LLMs"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["llm_extractor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
